# jack-example-tools

./: .cirrus.yml  .clang-format  .editorconfig  CHANGELOG.md  CONTRIBUTING.md  README.md  meson.build  meson_options.txt
.github/workflows/: build.yml  format.yml
common/: memops.c  memops.h  netjack_packet.c  netjack_packet.h
example-clients/: capture_client.c  impulse_grabber.c  internal_metro.cpp  internal_metro.h  intime.c  latent_client.c  meson.build  metro.c  midi_latency_test.c  midiseq.c  midisine.c  netmaster.c  netslave.c  server_control.c  showtime.c  simdtests.cpp  simple_client.c  transport_client.c  zombie.c
man/: alsa_in.0  jack_bufsize.0  jack_connect.0  jack_freewheel.0  jack_impulse_grabber.0  jack_iodelay.0  jack_load.0  jack_lsp.0  jack_metro.0  jack_monitor_client.0  jack_netsource.0  jack_property.0  jack_rec.0  jack_samplerate.0  jack_showtime.0  jack_simple_client.0  jack_transport.0  jack_unload.0  jack_wait.0  meson.build
scripts/: meson_create_man_pages  meson_create_symlink  meson_install_man_pages
tools/: alias.c  alsa_in.c  alsa_out.c  bufsize.c  connect.c  evmon.c  freewheel.c  iodelay.cpp  ipload.c  ipunload.c  load_test.c  lsp.c  meson.build  midi_dump.c  monitor_client.c  netsource.c  property.c  samplerate.c  session_notify.c  transport.c  tw.c  wait.c
tools/alsa_midi/: a2j.h  alsa_midi.c  meson.build
tools/zalsa/: meson.build  zita-a2j.cc  zita-j2a.cc
